[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/Menu/title_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/GUI/Sprites/barTime2.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Sprites/barTime.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/GUI.gd" type="Script" id=4]
[ext_resource path="res://Assets/GUI/Sprites/sheet_numers.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/Fonts/timeout.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Menu/btn_dynamicfont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Characters/Level/Objects/Guanengo.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/Level/Objects/Lanza_.png" type="Texture" id=9]
[ext_resource path="res://Assets/Characters/Level/Objects/Xolo.png" type="Texture" id=10]
[ext_resource path="res://Assets/Characters/Level/Objects/Huaraches_Bronce.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/Sounds/Perder.wav" type="AudioStream" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 840, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 960, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1080, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1320, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1440, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1560, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1680, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1800, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1920, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2040, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2160, 0, 120, 120 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2280, 0, 120, 120 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 112.0
margin_bottom = 32.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "NIVEL"

[node name="AnimatedSprite" type="AnimatedSprite" parent="HBoxContainer"]
position = Vector2( 234.39, 24.1062 )
scale = Vector2( 0.614876, 0.614876 )
frames = SubResource( 21 )
frame = 1

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.0
margin_right = 77.0
margin_bottom = 72.0
max_value = 30.0
value = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -505.0
margin_top = -125.5
margin_right = 505.0
margin_bottom = 125.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 6 )
text = "Se termino el tiempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 107.0
margin_right = 1010.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_hover = Color( 0.941176, 0.780392, 0.34902, 1 )
text = "Reintentar"
flat = true

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 181.0
margin_right = 1010.0
margin_bottom = 251.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_hover = Color( 0.941176, 0.780392, 0.34902, 1 )
text = "Menu Principal"
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.5
margin_top = -20.0
margin_right = 279.5
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer2"]
visible = false
position = Vector2( 436.46, -244.867 )
scale = Vector2( 0.378591, 0.378591 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="VBoxContainer2"]
visible = false
position = Vector2( 495.946, -245.557 )
scale = Vector2( 0.373645, 0.181129 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="VBoxContainer2"]
visible = false
position = Vector2( 555.684, -231.413 )
scale = Vector2( 0.310932, 0.310932 )
texture = ExtResource( 11 )

[node name="Sprite4" type="Sprite" parent="VBoxContainer2"]
visible = false
position = Vector2( 621.825, -242.6 )
scale = Vector2( 0.366667, 0.366667 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
